--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,6 +1,16 @@
 :root {
     --text-color: #333;
     --font-family: "Maison Neue", sans-serif;
+
+    --primary-fill-color: #4da6ff;
+    --card-bg-light: #ffffff;
+    --card-bg-dark: #1e1e2a;
+
+    --bar-bg-light: #e0e0e0;
+    --bar-bg-dark: #333;
+
+    --percent-bg-light: #f0f0f0;
+    --percent-bg-dark: #2e2e2e
 }
 
 /* Default theme */
@@ -63,19 +73,23 @@ body.dark-theme::after {
 .theme-sidebar {
     position: fixed;
     top: 50%;
-    right: -38px;
+    left: -35px;
     transform: translateY(-50%); 
     display: flex;
     flex-direction: column;
     padding: 6px;
     border-radius: 0 10px 10px 0;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-    transition: right 0.3s ease;
+    transition: left 0.3s ease;
     z-index: 999;
 }
 
 .theme-sidebar:hover {
-    right: 0;
+    left: 0;
+}
+
+.theme-sidebar.active {
+    left: 0;
 }
 
 .theme-btn {
