--- a/styles/skills.css
+++ b/styles/skills.css
@@ -148,7 +148,7 @@ body.dark-theme .skill-bar {
 
 .bar-fill {
     height: 100%;
-    background-color: rgb(0, 89, 179); /* Same fill for all */
+    background-color: bebebe; /* Same fill for all */
     border-radius: 6px;
     transition: width 0.4s ease-in-out;
 }
